--- a/Atividades_Js/style.css
+++ b/Atividades_Js/style.css
@@ -1,19 +1,30 @@
+body{
+    background-color: #000013;
+    color: #ffffff;
+}
 .button {
     display: inline-block;
     padding: 10px 20px;
     font-size: 16px;
-    color: #fff;
-    background-color: #007bff;
+    color: #ffffff;
+    background-color: #00234d;
     text-decoration: none;
-    border-radius: 5px;
+    border-radius: 10px;
     border: none;
     text-align: center;
     cursor: pointer;
     margin: 10px 0;
+    width: 44%;
+    height: 40px;
+    margin: 5px 0;
 }
 .button:hover {
     background-color: #0056b3;
 }
 section {
     margin: 40px 0;
+}
+
+form{
+    color: #ffffff;
 }
