--- a/Atividades_Js/style.css
+++ b/Atividades_Js/style.css
@@ -52,14 +52,32 @@ display: flex;
 justify-content: center;
 gap: 20px;
 align-items: center;
-height: 43vh;
+height: 50vh;
 font-family: 'Montserrat';
+font-size: 26px;
 }
 
 .subtitulo{
     font-family: 'Montserrat', sans-serif;
     font-weight: 100;
-    font-size: 13px;
+    font-size: 23px;
     margin: 0pc;
 }
 
+.button-container {
+    display: flex; 
+    justify-content: center; 
+    gap: 10px; 
+    margin-top: -7%; 
+
+}
+
+.button {
+    padding: 40px 20px;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #231f66;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+}
