--- a/Atividades_Js/style.css
+++ b/Atividades_Js/style.css
@@ -81,3 +81,15 @@ font-size: 26px;
     border-radius: 6px;
     cursor: pointer;
 }
+
+.container-index{
+    display: flex;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 0px;
+}
+
+h1{
+    margin: 0px;
+    padding: 0px;
+}
