--- a/Atividades_Js/css/style.css
+++ b/Atividades_Js/css/style.css
@@ -9,32 +9,6 @@ body{
     background-position: center;
     background-size: cover;
 }
-.button {
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #231f66;
-    text-decoration: none;
-    border-radius: 10px;
-    border: none;
-    text-align: center;
-    cursor: pointer;
-    margin: 10px 0;
-    width: 44%;
-    height: 40px;
-    margin: 5px 0;
-}
-.button:hover {
-    background-color: #2f2c68;
-}
-section {
-    margin: 40px 0;
-}
-
-form{
-    color: #ffffff;
-}
 
 .button-container {
     display: flex;
@@ -90,33 +64,60 @@ html, body {
 }
 
 .container-exercicios {
-    margin: 20px;
+    display: flex;
+    justify-content: center; /* Espaço entre os contêineres */
+    align-items: center;
+    height: 100vh;
+    gap: 20px; /* Espaçamento entre os dois formulários */
+}
+
+.container-label, .container-label-2 {
+    flex: 1; /* Ambos os contêineres ocupam o mesmo espaço */
+    display: flex;
+    flex-direction: column; /* Empilha os elementos verticalmente */
+    justify-content: space-between; /* Espaça os elementos verticalmente */
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    background-color: #f9f9f9;
-}
-
-.exercicios-container {
-    margin-bottom: 20px;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    background-color: #fff;
-}
-
-input[type="text"] {
-    width: calc(100% - 22px); /* Ajusta a largura para caber com padding e borda */
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1em;
+    background-color: #f5f5f5 ;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    min-width: 300px; /* Largura mínima para ambos os formulários */
+    max-width: 400px; /* Largura máxima para ambos os formulários */
+    height: 300;
     box-sizing: border-box;
+    margin: 30px;
+    color: #333333;
 }
 
-label {
-    display: block;
-    font-weight: bold;
-    margin: 10px 0 5px;
-    color: #555;
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px; /* Espaçamento entre os campos do formulário */
+}
+
+button {
+    align-self: center; /* Centraliza o botão horizontalmente */
+    width: 100%; /* Faz o botão ocupar toda a largura do formulário */
+    padding: 10px;
+    background-color: #000000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+input[type="number"] {
+    background-color: #f9f9f9; /* Fundo claro para os campos */
+    border: 1px solid #cccccc; /* Borda cinza clara */
+    color: #333333; /* Texto escuro para legibilidade */
+}
+
+.container-label p, 
+.container-label-2 p {
+    color: #333333; /* Cor do texto dos parágrafos */
 }
